--- a/app/views/refinery/memberships/admin/membership_emails/_email_body_help.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/_email_body_help.html.erb
@@ -2,7 +2,7 @@
   <p>
     <%= link_to t('toggle_email_body_help', :scope => 'admin.membership_emails'), "#",
                 :id => 'toggle_advanced_options',
-                :style => 'background-image: url(/images/refinery/icons/information.png)',
+                :style => 'background-image: url(<%= image_path("refinery/icons/information.png") %>)',
                 :title => t('email_body_help_title', :scope => 'admin.membership_emails') %>
   </p>
 </div>
@@ -13,7 +13,7 @@
 	</p>
 	<h2><%= t('.available_tags') %></h2>
 	<p>
-	<%= t('.user_data') %>: [:email], [:first_name], [:last_name], [:title], [:organization], [:street_address], [:city], [:province], [:postal_code], [:phone], [:fax], [:website]	
+	<%= t('.user_data') %>: [:email], [:first_name], [:last_name], [:title], [:organization], [:street_address], [:city], [:province], [:postal_code], [:phone], [:fax], [:website]
 	</p>
 	<% if Refinery::Setting.find_or_set('memberships_timed_accounts', true) %>
 	<p>
@@ -29,9 +29,9 @@
 </div>
 
 <% content_for :javascripts do %>
-  <script> 
+  <script>
     $(document).ready(function(){
       page_options.show_options();
     });
-  </script> 
+  </script>
 <% end %>
