--- a/app/views/refinery/memberships/admin/shared/_memberships_actions.html.erb
+++ b/app/views/refinery/memberships/admin/shared/_memberships_actions.html.erb
@@ -49,5 +49,5 @@
 </ul>
 
 <% content_for :stylesheets do %>
-  <%= stylesheet_link_tag ['memberships'] %>
+  <%= stylesheet_link_tag 'refinery/memberships/memberships' %>
 <% end %>
