--- a/app/views/refinery/memberships/admin/members/index.html.erb
+++ b/app/views/refinery/memberships/admin/members/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <% content_for :stylesheets do %>
-  <%= stylesheet_link_tag ['members_grid'] %>
+  <%= stylesheet_link_tag 'refinery/memberships/members_grid' %>
 <% end %>
 
 <% content_for :javascripts do %>
