--- a/app/views/refinery/memberships/admin/members/_members.html.erb
+++ b/app/views/refinery/memberships/admin/members/_members.html.erb
@@ -13,6 +13,6 @@
 </div>
 <% else %>
 <p>
-  <strong><%= t('no_members_yet', :scope => 'admin.members')%></strong>
+  <strong><%= t('no_members_yet', :scope => 'refinery.admin.members')%></strong>
 </p>
 <% end %>
