--- a/app/views/refinery/memberships/admin/members/index.html.erb
+++ b/app/views/refinery/memberships/admin/members/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('members_administration', :scope => 'admin.members')%></h2>
+<h2><%= t('members_administration', :scope => 'refinery.admin.members')%></h2>
 <div id='records' class="pagination_container">
   <%= render :partial => 'members' %>
 </div>
