--- a/app/views/refinery/memberships/admin/membership_emails/_email_body_help.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/_email_body_help.html.erb
@@ -1,13 +1,13 @@
 <div id='more_options_field'>
   <p>
-    <%= link_to t('toggle_email_body_help', :scope => 'admin.membership_emails'), "#",
+    <%= link_to t('toggle_email_body_help', :scope => 'refinery.admin.membership_emails'), "#",
                 :id => 'toggle_advanced_options',
                 :style => 'background-image: url(<%= image_path("refinery/icons/information.png") %>)',
-                :title => t('email_body_help_title', :scope => 'admin.membership_emails') %>
+                :title => t('email_body_help_title', :scope => 'refinery.admin.membership_emails') %>
   </p>
 </div>
 <div id='more_options' style="display:none;">
-	<h2><%= t('email_body_help_title', :scope => 'admin.membership_emails') %></h2>
+	<h2><%= t('email_body_help_title', :scope => 'refinery.admin.membership_emails') %></h2>
 	<p>
 	<%= t('.email_body_help') %>
 	</p>
