--- a/app/views/refinery/memberships/admin/membership_emails/_parts.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/_parts.html.erb
@@ -7,6 +7,6 @@
 </div>
 <% else %>
   <p>
-    <strong><%= t('no_email_parts_yet', :scope => 'admin.membership_emails') %></strong>
+    <strong><%= t('no_email_parts_yet', :scope => 'refinery.admin.membership_emails') %></strong>
   </p>
 <% end %>
