--- a/app/views/refinery/memberships/admin/membership_emails/index.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/index.html.erb
@@ -1,8 +1,8 @@
 <div id='records'>
-  <h2><%= t('emails_administration', :scope => 'admin.membership_emails')%></h2>
+  <h2><%= t('emails_administration', :scope => 'refinery.admin.membership_emails')%></h2>
   <%= render :partial => 'records' %>
   <br />
-  <h2><%= t('shared_email_parts', :scope => 'admin.membership_emails')%></h2>
+  <h2><%= t('shared_email_parts', :scope => 'refinery.admin.membership_emails')%></h2>
   <%= render :partial => 'parts' %>
 </div>
 
