--- a/app/views/refinery/memberships/admin/memberships/_members.html.erb
+++ b/app/views/refinery/memberships/admin/memberships/_members.html.erb
@@ -5,6 +5,6 @@
 </div>
 <% else %>
 <p>
-  <strong><%= t('no_new_members', :scope => 'admin.memberships')%></strong>
+  <strong><%= t('no_new_members', :scope => 'refinery.admin.memberships')%></strong>
 </p>
 <% end %>
