--- a/app/views/refinery/memberships/admin/memberships/_settings_groups.html.erb
+++ b/app/views/refinery/memberships/admin/memberships/_settings_groups.html.erb
@@ -1,5 +1,5 @@
 <div id="default_groups" class="dialog_area" style="display: none">
-  <h3><%= t('assign_new_users_to_the_selected_groups', :scope => 'admin.memberships.settings')%>:</h3>
+  <h3><%= t('assign_new_users_to_the_selected_groups', :scope => 'refinery.admin.memberships.settings')%>:</h3>
 
   <input type="hidden" name="memberships_default_roles[value][]" value="">
     
@@ -30,7 +30,7 @@
     </table>
   <% else %>
   <p>
-    <%= t('no_groups_found', :scope => 'admin.memberships.settings')%>
+    <%= t('no_groups_found', :scope => 'refinery.admin.memberships.settings')%>
   </p>
   <% end %>
   
