--- a/app/views/refinery/memberships/admin/memberships/settings.html.erb
+++ b/app/views/refinery/memberships/admin/memberships/settings.html.erb
@@ -2,19 +2,19 @@
   <div id="dialog_menu_left">
     <span id="on_registration_radio" class="radio">
       <input type="radio" name="settings_page" value="signup_settings" id="page_on_registration" checked="true">
-      <label for="page_on_registration" class="stripped"><%= t('signup_defaults', :scope => 'admin.memberships.settings') %></label>
+      <label for="page_on_registration" class="stripped"><%= t('signup_defaults', :scope => 'refinery.admin.memberships.settings') %></label>
     </span>
     <span id="default_groups_radio" class="radio">
       <input type="radio" name="settings_page" value="default_groups" id="page_default_groups">
-      <label for="page_default_groups" class="stripped"><%= t('default_groups', :scope => 'admin.memberships.settings') %></label>
+      <label for="page_default_groups" class="stripped"><%= t('default_groups', :scope => 'refinery.admin.memberships.settings') %></label>
     </span>
     <span id="email_delivery_radio" class="radio">
       <input type="radio" name="settings_page" value="email_delivery" id="page_email_delivery">
-      <label for="page_email_delivery" class="stripped"><%= t('email_delivery', :scope => 'admin.membership_emails.settings') %></label>
+      <label for="page_email_delivery" class="stripped"><%= t('email_delivery', :scope => 'refinery.admin.membership_emails.settings') %></label>
     </span>
     <span id="admin_notifications_radio" class="radio">
       <input type="radio" name="settings_page" value="admin_notifications" id="page_admin_notifications">
-      <label for="page_admin_notifications" class="stripped"><%= t('admin_notifications', :scope => 'admin.membership_emails.settings') %></label>
+      <label for="page_admin_notifications" class="stripped"><%= t('admin_notifications', :scope => 'refinery.admin.membership_emails.settings') %></label>
     </span>
   </div>
   
