--- a/app/views/refinery/memberships/admin/roles/index.html.erb
+++ b/app/views/refinery/memberships/admin/roles/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('roles_administration', :scope => 'admin.roles')%></h2>
+<h2><%= t('roles_administration', :scope => 'refinery.admin.roles')%></h2>
 <div id='records'>
   <%= render :partial => 'records' %>
 </div>
