--- a/app/views/refinery/memberships/admin/members/_form_profile.html.erb
+++ b/app/views/refinery/memberships/admin/members/_form_profile.html.erb
@@ -1,5 +1,5 @@
 <fieldset id="member_profile_form">
-  <legend><%=t('profile', :scope => 'admin.members')%></legend>
+  <legend><%=t('profile', :scope => 'refinery.admin.members')%></legend>
   <p class="field">
       <%= f.label :first_name %>
       <%= f.text_field :first_name, :class => 'widest' %>
