--- a/app/views/refinery/memberships/admin/memberships/_settings_admin_notification.html.erb
+++ b/app/views/refinery/memberships/admin/memberships/_settings_admin_notification.html.erb
@@ -1,5 +1,5 @@
 <div id="admin_notifications" style="display: none;" class="dialog_area">
-  <h3><%= t('deliver_admin_notifications_to', :scope => 'admin.membership_emails.settings')%>:</h3>  
+  <h3><%= t('deliver_admin_notifications_to', :scope => 'refinery.admin.membership_emails.settings')%>:</h3>  
   
   <%= fields_for :notification_setting, @notification_setting do | f | %>
   <div class='field'>
