--- a/app/views/refinery/memberships/admin/memberships/index.html.erb
+++ b/app/views/refinery/memberships/admin/memberships/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('new_members', :scope => 'admin.memberships')%></h2>
+<h2><%= t('new_members', :scope => 'refinery.admin.memberships')%></h2>
 <div id='records' class="pagination_container">
   <%= render :partial => 'members' %>
 </div>
