--- a/app/views/refinery/memberships/admin/roles/_form.html.erb
+++ b/app/views/refinery/memberships/admin/roles/_form.html.erb
@@ -17,7 +17,7 @@
                :continue_editing => false,
                :hide_cancel => false,
                :hide_delete => (@role.new_record?),
-               :delete_title => t('delete', :scope => 'admin.roles'),
+               :delete_title => t('delete', :scope => 'refinery.admin.roles'),
                :delete_confirmation => (t('message', :scope => 'refinery.admin.delete',
                                         :title => @role.title) if @role.persisted?)
                                       } %>
