broken template file

--- a/app/views/refinery/memberships/admin/membership_emails/_email_body_help.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/_email_body_help.html.erb
@@ -2,7 +2,7 @@
   <p>
     <%= link_to t('toggle_email_body_help', :scope => 'refinery.admin.membership_emails'), "#",
                 :id => 'toggle_advanced_options',
-                :style => 'background-image: url(<%= image_path("refinery/icons/information.png") %>)',
+                :style => 'background-image: url(#{image_path("refinery/icons/information.png")})',
                 :title => t('email_body_help_title', :scope => 'refinery.admin.membership_emails') %>
   </p>
 </div>
