--- a/app/views/refinery/memberships/members/_login_form.html.erb
+++ b/app/views/refinery/memberships/members/_login_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for User.new, :url => new_user_session_path do | f | %>
+<%= form_for Refinery::User.new, :as => 'refinery_user', :url => refinery_user_session_path do | f | %>
 <p>
   <%= f.label :login, t('.username') %>
   <%= f.text_field :login %>
