--- a/app/views/refinery/memberships/admin/membership_emails/_form.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/_form.html.erb
@@ -1,4 +1,4 @@
-<h2><%= MembershipEmail.model_name.human %>: <%= t(@membership_email.title, :scope => 'refinery.admin.membership_emails') %></h2>
+<h2><%= Refinery::Memberships::MembershipEmail.model_name.human %>: <%= t(@membership_email.title, :scope => 'refinery.admin.membership_emails') %></h2>
 <%= form_for [:admin, @membership_email], :url => @url_override || @url do |f| -%>
 
   <%= render :partial => "/refinery/admin/error_messages",
@@ -16,9 +16,9 @@
     <%= f.label :subject %>
     <%= f.text_field :subject, :class => "larger widest" %>
   </div>
-  
+
   <%= render :partial => "body_field", :locals => {:f => f} %>
-  
+
   <%= render :partial => "email_body_help" %>
 
   <%= render :partial => "/refinery/admin/form_actions",
