template path fixes

--- a/app/views/refinery/memberships/admin/images/insert_patched.html.erb
+++ b/app/views/refinery/memberships/admin/images/insert_patched.html.erb
@@ -1,4 +1,4 @@
-<%= render :template => 'admin/images/insert' %>
+<%= render :template => 'refinery/admin/images/insert' %>
 
 <% content_for :javascripts do %>
   <%= javascript_include_tag 'wym_monkeypatches' %>
