--- a/app/views/refinery/memberships/membership_mailer/email.html.erb
+++ b/app/views/refinery/memberships/membership_mailer/email.html.erb
@@ -1,5 +1,5 @@
-<%= MembershipEmailPart['email_header'].body.html_safe %>
+<%= Refinery::Memberships::MembershipEmailPart['email_header'].body.html_safe %>
 
 <%= @email.interpolated_body(@member).html_safe %>
 
-<%= MembershipEmailPart['email_footer'].body.html_safe %>
+<%= Refinery::Memberships::MembershipEmailPart['email_footer'].body.html_safe %>
