--- a/app/views/refinery/pages/admin/tabs/_roles.html.erb
+++ b/app/views/refinery/pages/admin/tabs/_roles.html.erb
@@ -2,14 +2,14 @@
   <div id="role_allow_everyone">
     <p>
       <%= radio_button_tag 'page_allow', '', @page.roles.blank?, :id => 'allow_everyone' %>
-      <label for="allow_everyone"><%= t('.allow_everyone') %></label>
+      <label class="stripped" for="allow_everyone"><%= t('.allow_everyone') %></label>
       <%= hidden_field_tag "page[role_ids][]", '' %>
     </p>
   </div>
   <div id="role_allow_all_members">
     <p>
       <%= radio_button_tag 'page_allow', '', @page.roles == [Refinery::Role.where(:title => 'Member').first], :id => 'allow_all_members' %>
-      <label for="allow_all_members"><%= t('.allow_all_members') %></label>
+      <label class="stripped" for="allow_all_members"><%= t('.allow_all_members') %></label>
       <%= hidden_field_tag "page[role_ids][]", Refinery::Role.where(:title => 'Member').first.id %>
     </p>
   </div>
@@ -17,13 +17,13 @@
   <div id="role_allow_members_of">
     <p>
       <%= radio_button_tag 'page_allow', '', @page.roles.present? && @page.roles != [Refinery::Role.where(:title => 'Member').first], :id => 'allow_members_of' %>
-      <label for="allow_members_of"><%= t('.allow_members_of') %></label>
+      <label class="stripped" for="allow_members_of"><%= t('.allow_members_of') %></label>
     </p>
     <%= hidden_field_tag "page[role_ids][]", 1 %>
     <%= hidden_field_tag "page[role_ids][]", 2 %>
     <% Refinery::Role.where(['title NOT IN (?)',['Superuser','Refinery','Member']]).all.each_with_index do | role, idx | %>
     <p class="role">
-      <%= check_box_tag "page[role_ids][]", role.id, @page.roles.include?(role), :id => "page_role_#{idx}" %><label for="page_role_<%= idx %>"><%= role.title %></label>
+      <%= check_box_tag "page[role_ids][]", role.id, @page.roles.include?(role), :id => "page_role_#{idx}" %><label class="stripped" for="page_role_<%= idx %>"><%= role.title %></label>
     </p>
     <% end %>
   </div>
@@ -32,9 +32,9 @@
 
 
 <% content_for :stylesheets do %>
-  <%= stylesheet_link_tag 'page_membership' %>
+  <%= stylesheet_link_tag 'refinery/memberships/page_membership' %>
 <% end %>
 
 <% content_for :javascripts do %>
-  <%= javascript_include_tag 'page_membership' %>
+  <%= javascript_include_tag 'refinery/memberships/page_membership' %>
 <% end %>
