--- a/app/views/refinery/memberships/members/new.html.erb
+++ b/app/views/refinery/memberships/members/new.html.erb
@@ -56,7 +56,7 @@
             <!--
             <li>
               <%#= f.label :province %>
-              <%#= f.select :province, options_for_select(Provinces::CODES) %>
+              <%#= f.select :province, options_for_select(::Refinery::Memberships::Provinces::CODES) %>
             </li>
             -->
             <li>
