fix configuration email & constants roles

--- a/lib/generators/refinery/memberships/templates/config/initializers/refinery/memberships.rb.erb
+++ b/lib/generators/refinery/memberships/templates/config/initializers/refinery/memberships.rb.erb
@@ -2,5 +2,8 @@ Refinery::Memberships.configure do |config|
 
   # Configures the path of login used on redirected nonmembers users
   # config.new_user_method_path = <%= Refinery::Memberships.new_user_method_path.inspect %>
+  
+  # Configures the "from" email 
+  # config.admin_email = <%= Refinery::Memberships.admin_email.inspect %>
 
 end
