--- a/app/views/refinery/memberships/members/_form_profile.html.erb
+++ b/app/views/refinery/memberships/members/_form_profile.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend><%=t('members.shared.profile')%></legend>
+  <legend><%=t('refinery.members.shared.profile')%></legend>
   <ol>
     <li>
       <%= f.label :first_name %>
