--- a/app/views/refinery/memberships/members/_form_account.html.erb
+++ b/app/views/refinery/memberships/members/_form_account.html.erb
@@ -2,16 +2,16 @@
   <legend><%=t('refinery.members.shared.account')%></legend>
   <ol>
     <li>
-      <%= f.label :email %>
+      <%= f.required_label :email %>
       <%= f.text_field :email %>&nbsp;
     </li>
     <%= "<li><span class='preview'>#{t('admin.users.form.blank_password_keeps_current')}</span></li>".html_safe if @member.persisted? %>
     <li>
-      <%= f.label :password %>
+      <%= f.required_label :password %>
       <%= f.password_field :password, :autocomplete => 'off' %>&nbsp;
     </li>
     <li>
-      <%= f.label :password_confirmation %>
+      <%= f.required_label :password_confirmation %>
       <%= f.password_field :password_confirmation, :autocomplete => 'off' %>&nbsp;
     </li>
   </ol>
